--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,6 @@
 	<title>Hello!</title>
 </head>
 <body>
-	Hello, world! This is a minor change.
+	Hello, world! This is a minor change and this is another one.
 </body>
 </html>
