--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,8 @@
 	<title>Hello!</title>
 </head>
 <body>
-	Hello, world! This is a minor change and this is another one.
+	<div>
+	Hello, world! This is a minor change and this is another one. Test two.
+	</div>
 </body>
 </html>
