--- a/hello.html
+++ b/hello.html
@@ -4,9 +4,14 @@
 <head>
 	<title>Hello!</title>
 </head>
+<style>
+	div {
+		font-size: 25px; 
+	}
+</style>
 <body>
 	<div>
-	Hello, world! This is a minor change and this is another one. Test two.
+	Hello, world! This is a minor change and this is another one. Test two. Test three. Test four
 	</div>
 </body>
 </html>
