--- a/hello.html
+++ b/hello.html
@@ -8,12 +8,14 @@
 	div {
 		font-size: 25px; 
 		font-color: red;
-		font: arial;
+		
 	}
 </style>
 <body>
+	<h1>Welcome to my website</h1>
 	<div>
 	Hello, world! This is a minor change and this is another one. Test two. Test three. Test four
 	</div>
+	This is some text
 </body>
 </html>
