Add exclamation point

--- a/hello.html
+++ b/hello.html
@@ -12,7 +12,7 @@
 	}
 </style>
 <body>
-	<h1>Welcome to my website</h1>
+	<h1>Welcome to my website!</h1>
 	<h2>Hello!</h2>
 	<div>
 	Hello, world! This is a minor change and this is another one. Test two. Test three. Test four
